--- a/css/slick-theme.css
+++ b/css/slick-theme.css
@@ -193,6 +193,7 @@
 
     opacity: .25;
     background-color: var(--blue);
+    border-radius: 100%;
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
