--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@
   --gray: #a9afb3;
   --gray-opacity: #ececec;
   --blue: #2553e5;
+  --red: #ec4352;
   --white: #fff;
   /* font size */
   --font-title: 45px;
@@ -72,8 +73,14 @@ a {
   text-decoration: none;
   list-style: none;
 }
+button {
+  background-color: transparent;
+}
 .blin {
   font-family: 'Blinker';
+}
+main {
+  min-height: 600px;
 }
 
 /* HEADER */
@@ -93,6 +100,42 @@ header .head_top {
 header .head_top .logo img {
   width: 200px;
 }
+header .head_search {
+  width: 50%;
+}
+header .head_search .input_wrap {
+  position: relative;
+  width: 100%;
+  padding: 0;
+  border-radius: var(--button-square);
+}
+header .head_search .input_wrap input {
+  width: var(--size-100);
+  height: 40px;
+  color: var(--black);
+  font-size: var(--font-content);
+  font-weight: 600;
+  border: 0;
+  outline: none;
+}
+header .head_search .input_wrap input::placeholder {
+  color: var(--gray);
+  font-size: var(--font-content);
+  font-weight: 600;
+}
+header .head_search .input_wrap button {
+  position: absolute;
+  right: 20px;
+  height: 40px;
+  background-color: transparent;
+  border: 0;
+  cursor: pointer;
+}
+header .head_search .input_wrap button i {
+  color: var(--gray);
+  font-size: var(--font-content);
+}
+
 header .head_top .head_contents {
   display: flex;
   align-items: center;
@@ -105,6 +148,9 @@ header .head_top .head_contents .alert {
 header .head_top .head_contents .alert i:hover {
   color: var(--blue);
 }
+header .head_top .head_contents .login {
+  position: relative;
+}
 header .head_top .head_contents .login button {
   color: var(--white);
   font-size: var(--font-content);
@@ -113,6 +159,40 @@ header .head_top .head_contents .login button {
   border: 0;
   border-radius: var(--button-acc);
   cursor: pointer;
+}
+header .head_top .head_contents .login ul {
+  display: none;
+  position: absolute;
+  width: 100%;
+  margin-top: 6px;
+  border: 1px solid var(--gray);
+  border-radius: var(--button-square);
+  background-color: var(--white);
+  z-index: 5;
+}
+header .head_top .head_contents .login ul.active {
+  display: block;
+}
+header .head_top .head_contents .login ul li {
+  border-bottom: 1px solid var(--gray);
+}
+header .head_top .head_contents .login ul li:last-child {
+  border-bottom: 0;
+}
+header .head_top .head_contents .login ul li a {
+  display: inline-block;
+  width: 100%;
+  padding: var(--button-padding);
+}
+header .head_top .head_contents .login ul li a:hover {
+  color: var(--white);
+  background-color: var(--blue);
+}
+header .head_top .head_contents .login ul li:first-child a {
+  border-radius: 10px 10px 0 0;
+}
+header .head_top .head_contents .login ul li:last-child a {
+  border-radius: 0 0 10px 10px;
 }
 header .head_top .head_contents .lang {
   position: relative;
@@ -123,7 +203,7 @@ header .head_top .head_contents .lang p {
   gap: 7px;
   color: var(--gray);
   font-size: var(--font-content);
-  font-weight: 600;
+  font-weight: 900;
   cursor: pointer;
 }
 header .head_top .head_contents .lang p a {
@@ -132,7 +212,79 @@ header .head_top .head_contents .lang p a {
 header .head_top .head_contents .lang p a:hover,
 header .head_top .head_contents .lang p a.active {
   color: var(--black);
-  font-weight: 900;
+}
+header .alert_popup {
+  position: fixed;
+  top: 0;
+  right: -100%;
+  width: 400px;
+  height: 100vh;
+  padding: var(--margin-title);
+  background-color: var(--white);
+  border-left: 1px solid var(--gray-opacity);
+  transition: 300ms;
+}
+header .alert_popup.active {
+  right: 0;
+  transition: 300ms;
+  z-index: 6;
+}
+header .alert_popup .title {
+  font-size: var(--font-middle);
+  text-align: center;
+  margin-bottom: var(--margin-title);
+}
+header .alert_popup button {
+  position: absolute;
+  top: var(--margin-title);
+  border: 0;
+  cursor: pointer;
+}
+header .alert_popup .alert_popup_close {
+  left: var(--margin-title);
+  font-size: var(--font-middle);
+}
+header .alert_popup .read_all {
+  right: var(--margin-title);
+  color: var(--white);
+  padding: 5px 10px;
+  background-color: var(--blue);
+  border-radius: var(--button-square);
+}
+header .alert_popup ul li {
+  position: relative;
+  margin-bottom: var(--button-acc);
+  padding-bottom: var(--button-acc);
+  border-bottom: 1px solid var(--gray-opacity);
+}
+header .alert_popup ul li:last-child {
+  margin-bottom: 0;
+  padding-bottom: 0;
+  border-bottom: 0;
+}
+header .alert_popup ul li p a {
+  display: block;
+  font-size: var(--font-content);
+  font-weight: 600;
+  margin-bottom: 5px;
+}
+header .alert_popup ul li p a:hover {
+  color: var(--blue);
+  font-weight: 700;
+}
+header .alert_popup ul li .date {
+  color: var(--gray);
+}
+header .alert_popup ul li .new {
+  position: absolute;
+  right: 0;
+  bottom: 30px;
+  color: var(--blue);
+  font-size: var(--font-icon);
+  font-weight: 800;
+}
+header .alert_popup ul li:last-child .new {
+  bottom: 0;
 }
 
 /* FOOTER */
@@ -258,30 +410,34 @@ footer .inner .sns ul li a i {
 /* SEARCH */
 main .search {
   display: flex;
+  flex-direction: column;
   width: var(--size-1024);
   margin: var(--margin-center);
   padding: var(--padding-100);
 }
-main .search h2 {
+main .search .seach_wrap {
+  display: flex;
+}
+main .search .seach_wrap .title {
   width: 300px;
   color: var(--blue);
   font-size: var(--font-title);
   text-align: center;
 }
-main .search .input_wrap {
+main .search .seach_wrap .input_wrap {
   position: relative;
   width: calc(100% - 300px);
   padding: 10px;
   border: 3px solid var(--blue);
   border-radius: var(--button-square);
 }
-main .search .input_wrap input {
+main .search .seach_wrap .input_wrap input {
   width: var(--size-100);
   height: 40px;
   border: 0;
   outline: none;
 }
-main .search .input_wrap button {
+main .search .seach_wrap .input_wrap button {
   position: absolute;
   right: 20px;
   height: 40px;
@@ -289,9 +445,17 @@ main .search .input_wrap button {
   border: 0;
   cursor: pointer;
 }
-main .search .input_wrap button i {
+main .search .seach_wrap .input_wrap button i {
   color: var(--gray);
   font-size: var(--font-content);
+}
+main .search .result_wrap {
+  margin-top: 50px;
+}
+main .search .result_wrap .login_text {
+  font-size: var(--font-middle);
+  font-weight: 700;
+  text-align: center;
 }
 
 /* SLIDER */
@@ -376,7 +540,7 @@ main .faq .inner .contents .qna_list .ans {
   display: none;
   margin-bottom: var(--button-acc);
 }
-main .faq .inner .contents .qna_list.active .ans {
+main .faq .inner .contents .qna_list .ans.active {
   display: flex;
 }
 main .faq .inner .contents .qna_list .ans b {
@@ -440,9 +604,13 @@ main .top_banner .text_box div h2 {
   font-size: var(--font-middle);
   margin-bottom: 6px;
 }
+main .top_banner .text_box div h2 span {
+  color: var(--white);
+  font-size: var(--font-content);
+}
 main .top_banner .text_box div p {
   color: var(--white);
-  font-size: var(--font-contents);
+  font-size: var(--font-content);
 }
 
 /* CONTACT */
@@ -723,4 +891,217 @@ main .top_banner .text_box div p {
 }
 .notice_write .wrap input[type='submit']:hover {
   background-color: var(--blue);
+}
+
+/* MYFAQ */
+
+.myfaq {
+  width: 100%;
+  padding-bottom: var(--margin-title);
+}
+.myfaq .inner {
+  width: var(--size-1024);
+  margin: var(--margin-center);
+}
+.myfaq .inner .title {
+  font-size: var(--font-middle);
+  font-weight: 800;
+}
+.myfaq .inner .tab {
+  display: flex;
+  gap: 20px;
+  margin: 30px 0;
+}
+.myfaq .inner .tab li {
+  color: var(--gray);
+  padding: var(--button-padding);
+  border-radius: var(--button-acc);
+  border: 2px solid var(--gray);
+  cursor: pointer;
+}
+.myfaq .inner .tab li.active {
+  color: var(--white);
+  font-weight: 600;
+  border: 1px solid var(--blue);
+  background-color: var(--blue);
+}
+.myfaq .inner .tab li span {
+  color: var(--gray);
+}
+.myfaq .inner .tab li.active span {
+  color: var(--white);
+}
+.myfaq .inner .contents .list {
+  display: none;
+}
+.myfaq .inner .contents .list.active {
+  display: block;
+}
+.myfaq .inner .contents .qna_list .que {
+  position: relative;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  margin: 20px 0;
+  cursor: pointer;
+}
+.myfaq .inner .contents .qna_list .que span {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: var(--red);
+  font-size: var(--font-copy);
+  font-weight: 700;
+}
+.myfaq .inner .contents .qna_list .que span.complete {
+  color: var(--blue);
+}
+.myfaq .inner .contents .qna_list .que span.complete i {
+  color: var(--blue);
+}
+.myfaq .inner .contents .qna_list .que span i {
+  display: inline-block;
+  font-size: var(--font-content);
+  color: var(--red);
+}
+.myfaq .inner .contents .qna_list .que b {
+  color: var(--blue);
+  font-size: var(--font-middle);
+  font-weight: 900;
+}
+.myfaq .inner .contents .qna_list .que p {
+  display: inline-block;
+  font-size: var(--font-content);
+  font-weight: 600;
+  margin: 10px 0 0 10px;
+}
+.myfaq .inner .contents .qna_list .ans {
+  display: none;
+  margin-bottom: var(--button-acc);
+}
+.myfaq .inner .contents .qna_list .ans.active {
+  display: flex;
+}
+.myfaq .inner .contents .qna_list .ans b {
+  color: var(--gray);
+  font-size: var(--font-middle);
+  font-weight: 900;
+}
+.myfaq .inner .contents .qna_list .ans p {
+  display: inline-block;
+  font-size: var(--font-content);
+  margin: 10px 0 0 10px;
+}
+
+/* MYPAGE */
+.mypage .inner {
+  width: var(--size-700);
+  margin: var(--margin-center);
+  padding: var(--padding-100);
+}
+.mypage .inner form {
+  position: relative;
+}
+.mypage .inner .title {
+  font-size: var(--font-title);
+  margin: var(--margin-center);
+  text-align: center;
+  padding-bottom: var(--margin-title);
+}
+.mypage .inner .block {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+.mypage .inner .block .w50 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 48%;
+}
+.mypage .inner .block p {
+  width: 20%;
+  font-size: var(--font-content);
+  font-weight: 500;
+}
+.mypage .inner .block input[type='text'] {
+  width: 80%;
+  height: 30px;
+  font-size: var(--font-copy);
+  padding: 5px 10px;
+  border: 1px solid var(--gray);
+}
+.mypage .inner .block input[type='text']::placeholder {
+  color: var(--gray);
+  font-size: var(--font-copy);
+}
+.mypage .inner .block button {
+  width: 100px;
+  height: 30px;
+  color: var(--gray);
+  font-size: var(--font-copy);
+  border: 1px solid var(--gray);
+  cursor: pointer;
+}
+.mypage .inner .block button:hover {
+  color: var(--white);
+  background-color: var(--blue);
+  border: 1px solid var(--blue);
+}
+.mypage .inner .block .number {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+}
+.mypage .inner .auth {
+  align-items: center;
+  justify-content: flex-end;
+  gap: 10px;
+}
+.mypage .inner .auth button {
+  width: 100px;
+  cursor: pointer;
+}
+e .inner .auth p,
+.mypage .inner .auth input {
+  width: auto !important;
+}
+.mypage .inner .block .radio {
+  display: flex;
+  align-items: center;
+  width: 80%;
+}
+.mypage .inner .submit {
+  display: block;
+  width: 150px;
+  color: var(--gray);
+  margin: 50px auto 0;
+  padding: var(--button-padding);
+  border: 1px solid var(--gray);
+  border-radius: var(--button-acc);
+  cursor: pointer;
+}
+.mypage .inner .submit:hover {
+  color: var(--white);
+  background-color: var(--blue);
+  border: 1px solid var(--blue);
+}
+.mypage .inner .retired {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  color: var(--gray);
+  font-size: var(--font-icon);
+  border: 0;
+  border-radius: var(--button-square);
+  padding: 5px 10px;
+  cursor: pointer;
+}
+.mypage .inner .retired:hover {
+  color: var(--white);
+  background-color: var(--red);
 }
