--- a/css/main.css
+++ b/css/main.css
@@ -146,9 +146,15 @@ header .head_top .head_contents {
   align-items: center;
   gap: 20px;
 }
+header .head_top .mobile_menu_btn,
+header .head_top .head_contents .close_mobile_btn,
+header .head_top .head_contents .mobile_menu {
+  display: none;
+}
 header .head_top .head_contents .alert {
   cursor: pointer;
 }
+header .head_top .head_contents .close_mobile_btn i,
 header .head_top .head_contents .alert i {
   font-size: var(--font-middle);
 }
@@ -257,6 +263,9 @@ header .alert_popup .alert_popup_close {
   left: var(--margin-title);
   font-size: var(--font-middle);
 }
+header .alert_popup .alert_popup_close i {
+  font-size: var(--font-middle);
+}
 header .alert_popup .read_all {
   right: var(--margin-title);
   color: var(--white);
@@ -348,6 +357,8 @@ footer .inner .contents address p i {
 }
 footer .inner .contents nav a:last-child,
 footer .inner .contents address p:last-child {
+  margin: 0;
+  padding: 0;
   border: 0;
 }
 footer .inner .contents .copy {
@@ -383,7 +394,7 @@ footer .inner .sns ul li a i {
 .popup_Privacy h2 {
   font-size: var(--font-title);
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: var(--margin-title);
 }
 .popup_term p,
 .popup_Privacy p {
@@ -620,6 +631,7 @@ main .faq .inner .contents .qna_list .ans b {
 main .faq .inner .contents .qna_list .ans p {
   display: inline-block;
   font-size: var(--font-content);
+  line-height: 1.5;
   margin: 10px 0 0 10px;
 }
 
@@ -634,20 +646,20 @@ main .partners .inner {
   width: var(--size-1024);
   margin: var(--margin-center);
 }
-main .partners .title {
+main .partners .inner .title {
   width: 30%;
   font-size: var(--font-title);
 }
-main .partners ul {
+main .partners .inner ul {
   display: flex;
   align-items: center;
   justify-content: flex-end;
   width: 70%;
 }
-main .partners ul li {
+main .partners .inner ul li {
   width: 30%;
 }
-main .partners ul li img {
+main .partners .inner ul li img {
   width: var(--size-100);
 }
 
@@ -1147,8 +1159,10 @@ main .qna .inner .qna_list .que:last-child {
   padding-bottom: 0;
   border-bottom: 0;
 }
-main .qna .inner .qna_list .que:hover .title p {
-  font-weight: 700;
+main .qna .inner .qna_list .que .title {
+  display: flex;
+  align-items: flex-end;
+  gap: 6px;
 }
 main .qna .inner .qna_list .que .title b {
   color: var(--blue);
@@ -1160,6 +1174,9 @@ main .qna .inner .qna_list .que .title p {
   font-size: var(--font-content);
   font-weight: 600;
   margin: 10px 0 0 10px;
+}
+main .qna .inner .qna_list .que:hover .title p {
+  font-weight: 700;
 }
 main .qna .inner .qna_list .que span {
   color: var(--gray);
@@ -1349,4 +1366,236 @@ main .qna .inner .qna_view_title button:hover {
   font-size: var(--font-copy);
   font-weight: 700;
   cursor: pointer;
+}
+@media all and (max-width: 1024px) {
+  /* COMMON */
+  :root {
+    /* size */
+    --size-100: 100%;
+    --size-700: 100%;
+    --size-1024: 100%;
+    /* font size */
+    --font-title: 2rem;
+    --font-middle: 1.5rem;
+    --font-content: 1rem;
+    --font-copy: 0.8rem;
+    --font-icon: 0.6rem;
+    /* margin */
+    --margin-title: 10vw;
+    /* padding */
+    --padding-10: 3vw;
+    --padding-30: 8vw;
+    --padding-100: 15vw;
+    --padding-100-0: 15vw 0;
+    /* button */
+    --button-acc: 4vw;
+    --button-square: 10px;
+    --button-padding: 2vw 5vw;
+  }
+
+  /* HEADER */
+  header .head_top {
+    display: flex;
+    flex-direction: column;
+  }
+  header .head_top .mobile_menu_btn {
+    position: absolute;
+    left: 20px;
+    top: 20px;
+  }
+  header .head_top .mobile_menu_btn i {
+    font-size: var(--font-content);
+  }
+  header .head_top .logo {
+    width: 40%;
+    height: 60px;
+    margin: var(--margin-center);
+  }
+  header .head_search {
+    width: 100%;
+  }
+  header .head_search .input_wrap button {
+    right: 0;
+  }
+  header .head_top .logo img {
+    display: block;
+    width: auto;
+    height: 60px;
+    margin: var(--margin-center);
+  }
+  header .head_top .head_contents {
+    position: fixed;
+    right: -100%;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
+    padding: var(--padding-30);
+    background-color: var(--white);
+    transition: 300ms;
+  }
+  header .head_top .head_contents.active {
+    right: 0;
+    transition: 300ms;
+  }
+  header .head_top .head_contents .close_mobile_btn {
+    position: absolute;
+    left: var(--padding-30);
+    top: var(--padding-30);
+  }
+  header .head_top .head_contents .login {
+    display: none;
+  }
+  header .head_top .head_contents .alert {
+    position: absolute;
+    right: var(--padding-30);
+    top: var(--padding-30);
+  }
+  header .head_top .head_contents .lang {
+    position: absolute;
+    right: var(--padding-30);
+    bottom: var(--padding-30);
+  }
+  header .head_top .mobile_menu_btn,
+  header .head_top .head_contents .close_mobile_btn,
+  header .head_top .head_contents .mobile_menu {
+    display: block;
+  }
+  header .head_top .head_contents .mobile_menu ul {
+    display: flex;
+    flex-direction: column;
+  }
+  header .head_top .head_contents .mobile_menu ul.mobile_nav {
+    gap: var(--padding-30);
+  }
+  header .head_top .head_contents .mobile_menu ul.mobile_login {
+    gap: var(--padding-10);
+    margin-top: var(--padding-30);
+    padding-top: var(--padding-30);
+    border-top: 1px solid var(--gray);
+  }
+  header .head_top .head_contents .mobile_menu ul li a {
+    display: block;
+    font-size: var(--font-title);
+    font-weight: 700;
+    text-align: center;
+  }
+  header .head_top .head_contents .mobile_menu ul.mobile_login li a {
+    font-size: var(--font-content);
+  }
+  header .alert_popup {
+    width: var(--size-100);
+    padding: var(--padding-30);
+  }
+  header .alert_popup button {
+    top: var(--padding-30);
+  }
+  header .alert_popup .alert_popup_close {
+    left: var(--padding-30);
+  }
+  header .alert_popup .read_all {
+    right: var(--padding-30);
+  }
+
+  /* FOOTER */
+  footer .inner {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: var(--padding-30);
+  }
+  footer .inner .contents nav {
+    margin: 5vw 0;
+  }
+  footer .inner .contents nav a {
+    margin: 0 2vw 2vw 0;
+    padding: 0;
+    border: 0;
+  }
+  footer .inner .contents address {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  footer .inner .contents address p {
+    margin: 0 2vw 2vw 0;
+    padding: 0;
+    border: 0;
+  }
+  footer .inner .sns ul {
+    margin-top: var(--padding-30);
+  }
+  .popup_term,
+  .popup_Privacy {
+    width: 90%;
+  }
+
+  /* SUB PAGE */
+  main .top_banner {
+    height: auto;
+    padding: 6vw 0;
+  }
+  main .top_banner .text_box {
+    margin: 0;
+    padding: 0;
+  }
+  main .top_banner .text_box img {
+    display: none;
+  }
+
+  /* MAIN */
+  main .search {
+    flex-direction: column;
+    padding: 10vw 0;
+  }
+  main .search .title {
+    display: none;
+    width: var(--size-100);
+    margin-bottom: 5vw;
+  }
+  main .search .input_wrap button {
+    right: var(--padding-10);
+  }
+  main .search .input_wrap {
+    width: 90%;
+    margin: var(--margin-center);
+  }
+  main .faq {
+    width: 90%;
+    margin: var(--margin-center);
+  }
+  main .faq .inner .tab {
+    gap: 2vw;
+    margin: 5vw 0;
+  }
+  main .faq .inner .contents .qna_list .que p {
+    width: 80%;
+  }
+  main .faq .inner .contents .qna_list .que i {
+    top: 13px;
+  }
+
+  main .partners .inner {
+    flex-direction: column;
+  }
+  main .partners .inner ul {
+    justify-content: flex-start;
+    margin-left: var(--padding-30);
+  }
+  main .partners .inner .title {
+    margin-bottom: var(--padding-30);
+    margin-left: var(--padding-30);
+  }
+
+  /* QNA */
+  main .qna .inner {
+    width: 90%;
+  }
+  main .qna .inner .qna_list .que {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  main .qna .inner .qna_list .que .title {
+    display: flex;
+  }
 }
