--- a/css/main.css
+++ b/css/main.css
@@ -336,6 +336,7 @@ footer .inner .contents nav a {
   display: inline-block;
   color: var(--white);
   font-size: var(--font-copy);
+  font-weight: 300;
   margin-right: var(--padding-10);
   padding-right: var(--padding-10);
   border-right: 1px solid var(--white);
@@ -349,6 +350,7 @@ footer .inner .contents address {
 footer .inner .contents address p {
   color: var(--white);
   font-size: var(--font-copy);
+  font-weight: 300;
   font-style: normal;
   line-height: 1;
   margin-right: var(--padding-10);
@@ -368,7 +370,7 @@ footer .inner .contents address p:last-child {
 footer .inner .contents .copy {
   color: var(--gray);
   font-size: var(--font-copy);
-  font-weight: 500;
+  font-weight: 300;
   margin-top: var(--padding-30);
 }
 footer .inner .sns ul {
@@ -411,7 +413,7 @@ footer .inner .sns ul li a i {
   color: var(--white);
   font-size: var(--font-content);
   margin-top: 50px;
-  padding: 20px 0;
+  padding: var(--button-padding);
   background-color: var(--gray);
   outline: none;
   border: 0;
@@ -768,13 +770,15 @@ main .top_banner .text_box div p {
   margin: var(--margin-center);
   padding: var(--padding-100-0);
 }
+.notice .inner .btn_wrap {
+  display: flex;
+  justify-content: flex-end;
+}
 .notice .inner .write_btn {
-  position: absolute;
-  right: 0;
   color: var(--white);
   font-size: var(--font-copy);
-  margin-top: var(--margin-title);
-  padding: 10px 25px;
+  margin-top: var(--padding-30);
+  padding: var(--button-padding);
   border: 0;
   border-radius: var(--button-acc);
   outline: none;
@@ -800,6 +804,12 @@ main .top_banner .text_box div p {
   font-weight: 700;
   padding: 20px 0;
   border-bottom: 1px solid var(--black);
+}
+.notice table thead tr th:first-child {
+  width: 80%;
+}
+.notice table thead tr th:last-child {
+  width: 20%;
 }
 .notice table tbody tr td {
   padding: 20px 5px;
@@ -1194,7 +1204,7 @@ main .qna .inner .qna_view_title {
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  margin-bottom: var(--padding-30);
+  -webkit-margin-top-collapse: var(--padding-30);
 }
 main .qna .inner .qna_view_title button {
   color: var(--white);
@@ -1685,6 +1695,12 @@ main .qna .inner .qna_view_title button:hover {
   .notice .inner {
     width: 90%;
     margin: var(--margin-center);
+  }
+  .notice table thead tr th:first-child {
+    width: 70%;
+  }
+  .notice table thead tr th:last-child {
+    width: 30%;
   }
   .notice table thead tr th {
     font-size: var(--font-copy);
